5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1800_2565.log
== SUBMITION (2019-06-06 11:14:43) 
-- CODE:
from numpy import*
#vetor de medias finais
vetm=array(eval(input("Digite o vetor das medias: ")))
#vetor de presença
vetp=array(eval(input("Digite o vetor de presenca: ")))
#vetor para carga horaria da disciplina
vetc=array(eval(input("Digite o vetor de varga horaria: ")))
#vetor de contagem
cont= zeros(3, dtype=int)
for i in range(size(vetm)):
	if(vetm[i]>=5.0 and vetp[i]>=0.75*vetc[i]):
		cont[0]=cont[0]+1
	elif(vetm[i]<5.0):
		cont[1]=cont[1]+1
	elif(vetp[i]<0.75*vetc[i]):
		cont[2]=cont[2]+1
print(cont)		
-- EXECUTION TIME:
1.03623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2565/main.py", line 11, in <module>
    if(vetm[i]>=5.0 and vetp[i]>=0.75*vetc[i]):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:14:46) 
-- CODE:
from numpy import*
#vetor de medias finais
vetm=array(eval(input("Digite o vetor das medias: ")))
#vetor de presença
vetp=array(eval(input("Digite o vetor de presenca: ")))
#vetor para carga horaria da disciplina
vetc=array(eval(input("Digite o vetor de varga horaria: ")))
#vetor de contagem
cont= zeros(3, dtype=int)
for i in range(size(vetm)):
	if(vetm[i]>=5.0 and vetp[i]>=0.75*vetc[i]):
		cont[0]=cont[0]+1
	elif(vetm[i]<5.0):
		cont[1]=cont[1]+1
	elif(vetp[i]<0.75*vetc[i]):
		cont[2]=cont[2]+1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:17:58) 
-- CODE:
from numpy import*
#vetor de medias finais
vetm=array(eval(input("Digite o vetor das medias: ")))
#vetor de presença
vetp=array(eval(input("Digite o vetor de presenca: ")))
#vetor para carga horaria da disciplina
vetc=array(eval(input("Digite o vetor de varga horaria: ")))
#vetor de contagem
cont= zeros(3, dtype=int)
for i in range(0,size(vetm)):
	if(vetm[i]<5.0):
		cont[1]=cont[1]+1
	elif(vetp[i]<0.75*vetc[i]):
		cont[2]=cont[2]+1
	else:
		cont[0]=cont[0]+1
		
print(cont)		
-- EXECUTION TIME:
1.01131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2565/main.py", line 13, in <module>
    elif(vetp[i]<0.75*vetc[i]):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:20:04) 
-- CODE:
from numpy import*
#vetor de medias finais
vetm=array(eval(input("Digite o vetor das medias: ")))
#vetor de presença
vetp=array(eval(input("Digite o vetor de presenca: ")))
#carga horaria da disciplina
c = flopat(input("Digite a carga horaria: "))
#vetor de contagem
cont= zeros(3, dtype=int)
for i in range(0,size(vetm)):
	if(vetm[i]<5.0):
		cont[1]=cont[1]+1
	elif(vetp[i]/c<0.75):
		cont[2]=cont[2]+1
	else:
		cont[0]=cont[0]+1
		
print(cont)		
-- EXECUTION TIME:
0.831319
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2565/main.py", line 7, in <module>
    c = flopat(input())
NameError: name 'flopat' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:07) 
-- CODE:
from numpy import*
#vetor de medias finais
vetm=array(eval(input("Digite o vetor das medias: ")))
#vetor de presença
vetp=array(eval(input("Digite o vetor de presenca: ")))
#carga horaria da disciplina
c = flopat(input("Digite a carga horaria: "))
#vetor de contagem
cont= zeros(3, dtype=int)
for i in range(0,size(vetm)):
	if(vetm[i]<5.0):
		cont[1]=cont[1]+1
	elif(vetp[i]/c<0.75):
		cont[2]=cont[2]+1
	else:
		cont[0]=cont[0]+1
		
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:20:30) 
-- CODE:
from numpy import*
#vetor de medias finais
vetm=array(eval(input("Digite o vetor das medias: ")))
#vetor de presença
vetp=array(eval(input("Digite o vetor de presenca: ")))
#carga horaria da disciplina
c = float(input("Digite a carga horaria: "))
#vetor de contagem
cont= zeros(3, dtype=int)
for i in range(0,size(vetm)):
	if(vetm[i]<5.0):
		cont[1]=cont[1]+1
	elif(vetp[i]/c<0.75):
		cont[2]=cont[2]+1
	else:
		cont[0]=cont[0]+1
		
print(cont)		
-- EXECUTION TIME:
0.945411
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
